--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "iron-input": "2.0.1",
     "paper-button": "2.0.0",
     "paper-input": "2.0.5",
-    "app-storage": "2.0.0"
+    "app-storage": "2.0.0",
+    "geo-location": "ebidel/geo-location#^2.0.2",
+    "paper-weather": "ryanburns23/paper-weather#^2.1.2"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
