--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,10 @@
     "paper-input": "2.0.5",
     "app-storage": "2.0.0",
     "geo-location": "ebidel/geo-location#^2.0.2",
-    "paper-weather": "ryanburns23/paper-weather#^2.1.2"
+    "paper-weather": "ryanburns23/paper-weather#^2.1.2",
+    "iron-list": "2.0.0",
+    "paper-dropdown-menu": "2.0.0",
+    "paper-listbox": "2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
